--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=root
 spring.datasource.password=12345
 
 spring.thymeleaf.check-template-location=true
-spring.thymeleaf.mode=HTML5
+spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 spring.devtools.livereload.enabled=true 
